add new ui pages + small fixes

--- a/flask_server/templates/base.html
+++ b/flask_server/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='base_elements.css') }}" />
     <title>{% block title %}{% endblock %} - Image Tag</title>
     {% endblock %}
 </head>
